--- a/rabbitmq-services-featureflag-istio.yaml
+++ b/rabbitmq-services-featureflag-istio.yaml
@@ -2,14 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: rabbitmq
+  labels:
+    app: rabbitmq
 spec:
   selector:
     app: rabbitmq
-    deployment-group: featureflag
   ports:
     - protocol: TCP
-      # port: 80
-      # port: 8080
       port: 15672
-      # targetPort: 15672
   type: ClusterIP
